Fixed score screen padding noticable on mobiles

--- a/src/containers/scoreScreen/scoreScreen.scss
+++ b/src/containers/scoreScreen/scoreScreen.scss
@@ -6,7 +6,7 @@
   padding: 20px;
   background: $transBlack1;
   border: 3px solid $brown1;
-  margin: 10px auto -20px auto;
+  margin: 10px auto 40px auto;
 
   .comments {
     font-style: italic;
